// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tooltip/demo/arrow-point-at-center.md correctly 1`] = `
<div>
  <button
    class="ant-btn ant-btn-flat"
    type="button"
  >
    <span>
      Align edge / 边缘对齐
    </span>
    <div
      class="ant-ripple-wrapper"
    />
  </button>
  <button
    class="ant-btn ant-btn-flat"
    type="button"
  >
    <span>
      Arrow points to center / 箭头指向中心
    </span>
    <div
      class="ant-ripple-wrapper"
    />
  </button>
</div>
`;

exports[`renders ./components/tooltip/demo/auto-adjust-overflow.md correctly 1`] = `
<div
  style="overflow:hidden;position:relative;padding:24px;border:1px solid #e9e9e9"
>
  <button
    class="ant-btn ant-btn-flat"
    type="button"
  >
    <span>
      Adjust automatically / 自动调整
    </span>
    <div
      class="ant-ripple-wrapper"
    />
  </button>
  <br />
  <button
    class="ant-btn ant-btn-flat"
    type="button"
  >
    <span>
      Ingore / 不处理
    </span>
    <div
      class="ant-ripple-wrapper"
    />
  </button>
</div>
`;

exports[`renders ./components/tooltip/demo/basic.md correctly 1`] = `
<span>
  Tooltip will show when mouse enter.
</span>
`;

exports[`renders ./components/tooltip/demo/placement.md correctly 1`] = `
<div
  class="demo"
>
  <div
    style="margin-left:70px;white-space:nowrap"
  >
    <button
      class="ant-btn ant-btn-flat"
      type="button"
    >
      <span>
        TL
      </span>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
    <button
      class="ant-btn ant-btn-flat"
      type="button"
    >
      <span>
        Top
      </span>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
    <button
      class="ant-btn ant-btn-flat"
      type="button"
    >
      <span>
        TR
      </span>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </div>
  <div
    style="width:70px;float:left"
  >
    <button
      class="ant-btn ant-btn-flat"
      type="button"
    >
      <span>
        LT
      </span>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
    <button
      class="ant-btn ant-btn-flat"
      type="button"
    >
      <span>
        Left
      </span>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
    <button
      class="ant-btn ant-btn-flat"
      type="button"
    >
      <span>
        LB
      </span>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </div>
  <div
    style="width:70px;margin-left:304px"
  >
    <button
      class="ant-btn ant-btn-flat"
      type="button"
    >
      <span>
        RT
      </span>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
    <button
      class="ant-btn ant-btn-flat"
      type="button"
    >
      <span>
        Right
      </span>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
    <button
      class="ant-btn ant-btn-flat"
      type="button"
    >
      <span>
        RB
      </span>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </div>
  <div
    style="margin-left:70px;clear:both;white-space:nowrap"
  >
    <button
      class="ant-btn ant-btn-flat"
      type="button"
    >
      <span>
        BL
      </span>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
    <button
      class="ant-btn ant-btn-flat"
      type="button"
    >
      <span>
        Bottom
      </span>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
    <button
      class="ant-btn ant-btn-flat"
      type="button"
    >
      <span>
        BR
      </span>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </div>
</div>
`;
